javascript wait for modal fade in
Fixed bug when delete confirm button sometimes has not been clicked because of fading in modal. Now it wait 500ms before click

--- a/AmazonMaven/test-output/old/AmazonShopSuite/classes.html
+++ b/AmazonMaven/test-output/old/AmazonShopSuite/classes.html
@@ -57,11 +57,11 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>Add5CDsToCart</td>
+<td>AddVinylToCart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>AddVinylToCart</td>
+<td>Add5VinylssToCart</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
