--- a/AmazonMaven/test-output/old/AmazonShopSuite/methods.html
+++ b/AmazonMaven/test-output/old/AmazonShopSuite/methods.html
@@ -1,30 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AmazonShopSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="9fba89">  <td>19/03/13 12:38:04</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonBase.SetupAmazon()[pri:0, instance:tests.SmokeTestCase@7823a2f9]">&gt;&gt;SetupAmazon</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="85796e">  <td>19/03/13 12:38:31</td>   <td>26483</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmokeTestCase.AddtoCartSmoke()[pri:0, instance:tests.SmokeTestCase@7823a2f9]">AddtoCartSmoke</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="85796e">  <td>19/03/13 12:38:42</td>   <td>37375</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmokeTestCase.SubmitAddressSmoke()[pri:0, instance:tests.SmokeTestCase@7823a2f9]">SubmitAddressSmoke</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="85796e">  <td>19/03/13 12:38:48</td>   <td>43891</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SmokeTestCase.FillCCSmoke()[pri:0, instance:tests.SmokeTestCase@7823a2f9]">FillCCSmoke</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/03/13 12:38:50</td>   <td>46158</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonBase.CloseBrowser()[pri:0, instance:tests.SmokeTestCase@7823a2f9]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/03/13 12:38:53</td>   <td>48481</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonBase.SetupAmazon()[pri:0, instance:tests.AddMusicTestCase@5c7fa833]">&gt;&gt;SetupAmazon</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>19/03/13 12:39:18</td>   <td>73367</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AddMusicTestCase.FindItem()[pri:0, instance:tests.AddMusicTestCase@5c7fa833]">&gt;&gt;FindItem</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>19/03/13 12:39:23</td>   <td>79007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMusicTestCase.Add5VinylssToCart()[pri:0, instance:tests.AddMusicTestCase@5c7fa833]">Add5VinylssToCart</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>19/03/13 12:39:35</td>   <td>90886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMusicTestCase.AddCDToCart()[pri:0, instance:tests.AddMusicTestCase@5c7fa833]">AddCDToCart</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>19/03/13 12:39:46</td>   <td>101661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMusicTestCase.AddCassetteToCart()[pri:0, instance:tests.AddMusicTestCase@5c7fa833]">AddCassetteToCart</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>19/03/13 12:39:56</td>   <td>111588</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMusicTestCase.AddMp3ToCart()[pri:0, instance:tests.AddMusicTestCase@5c7fa833]">AddMp3ToCart</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="a097cc">  <td>19/03/13 12:39:59</td>   <td>114719</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="AddMusicTestCase.AddVinylToCart()[pri:0, instance:tests.AddMusicTestCase@5c7fa833]">AddVinylToCart</td> 
-  <td>main@1007603019</td>   <td></td> </tr>
-<tr bgcolor="9fba89">  <td>19/03/13 12:40:11</td>   <td>126611</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;AmazonBase.CloseBrowser()[pri:0, instance:tests.AddMusicTestCase@5c7fa833]">&lt;&lt;CloseBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1007603019</td>   <td></td> </tr>
+<tr bgcolor="8ad7a2">  <td>19/03/13 14:34:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;AmazonBase.SetupAmazon()[pri:0, instance:tests.SmokeTestCase@4c70fda8]">&gt;&gt;SetupAmazon</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@239465106</td>   <td></td> </tr>
 </table>
