--- a/AmazonMaven/test-output/old/AmazonShopSuite/reporter-output.html
+++ b/AmazonMaven/test-output/old/AmazonShopSuite/reporter-output.html
@@ -1,5 +1,1 @@
-<h2>Reporter output</h2><table><tr><td>      Cleaning...</td></tr>
-<tr><td>      Closing...</td></tr>
-<tr><td>      Cleaning...</td></tr>
-<tr><td>      Closing...</td></tr>
-</table>
+<h2>Reporter output</h2><table></table>
